--- a/style.css
+++ b/style.css
@@ -38,7 +38,49 @@ body {
 
 .square {
     background-color: white;
-
     flex: 1;
 }
 
+.zero {
+    background-color: rgba(0, 0, 0, 0);
+}
+
+.one {
+    background-color: rgba(0, 0, 0, .1);
+}
+
+.two {
+    background-color: rgba(0, 0, 0, .2);
+}
+
+.three {
+    background-color: rgba(0, 0, 0, .3);
+}
+
+.four {
+    background-color: rgba(0, 0, 0, .4);
+}
+
+.five {
+    background-color: rgba(0, 0, 0, .5);
+}
+
+.six {
+    background-color: rgba(0, 0, 0, .6);
+}
+
+.seven {
+    background-color: rgba(0, 0, 0, .7);
+}
+
+.eight {
+    background-color: rgba(0, 0, 0, .8);
+}
+
+.nine {
+    background-color: rgba(0, 0, 0, .9);
+}
+
+.ten {
+    background-color: rgba(0, 0, 0, 1);
+}
