feat: add clearGrid and button to resize grid

--- a/style.css
+++ b/style.css
@@ -1,12 +1,31 @@
 body {
-    height: 50vmin;
+    height: 60vmin;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: rgb(188, 188, 188);
 
-    padding: 300px;
+    flex-direction: column;
+    padding: 100px;
     gap: 10px;
+}
+
+.button-holder {
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+    gap: 300px;
+}
+
+button {
+    padding: 8px 16px;
+    border-radius: 8px;
+    background-color: rgb(91, 91, 91);
+    border: 4px solid black;
+    color: white;
+    font-size: medium;
+    font-weight: 600;
+    font-family: sans-serif;
 }
 
 .box-grid {
