--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(188, 188, 188);
+    background-color: rgb(68, 50, 50);
 
     flex-direction: column;
     padding: 100px;
@@ -20,16 +20,19 @@ body {
 button {
     padding: 8px 16px;
     border-radius: 8px;
-    background-color: rgb(91, 91, 91);
+    background-color: rgb(255, 255, 255);
     border: 4px solid black;
-    color: white;
+    color: rgb(24, 24, 24);
     font-size: medium;
     font-weight: 600;
     font-family: sans-serif;
 }
 
 .box-grid {
-    background-color: rgb(107, 128, 128);
+    background-color: rgb(188, 188, 188);
+
+    border: 50px solid rgb(212, 65, 65);
+    border-radius: 50px;
 
     max-width: 80vmin;
     aspect-ratio: 1 / 1; 
